[gd_scene load_steps=18 format=2]

[ext_resource path="res://scripts/enemy_general.gd" type="Script" id=1]
[ext_resource path="res://images/enemies/spirit.png" type="Texture" id=2]
[ext_resource path="res://images/gui/types/abyss_type.png" type="Texture" id=3]
[ext_resource path="res://images/gui/types/doom_type.png" type="Texture" id=4]
[ext_resource path="res://images/gui/enemy_hp_empty.png" type="Texture" id=5]
[ext_resource path="res://images/gui/enemy_hp_full.png" type="Texture" id=6]
[ext_resource path="res://images/gui/types/weaknesses_header.png" type="Texture" id=7]
[ext_resource path="res://scenes/gui/type_gui.tscn" type="PackedScene" id=8]
[ext_resource path="res://images/gui/types/resistances_header.png" type="Texture" id=9]
[ext_resource path="res://fonts/Seymour_One/SeymourOne-Regular.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://fonts/Aldrich/Aldrich-Regular.ttf" type="DynamicFontData" id=11]

[sub_resource type="Animation" id=1]
resource_name = "attack"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.565217, 0.560825 ), Vector2( 0.832776, 0.752577 ), Vector2( 0.83612, 0.783505 ), Vector2( 0.832776, 0.752577 ), Vector2( 0.565217, 0.560825 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 85.2174, 133.72 ), Vector2( 80, 340 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "on_death_animation_stopped"
} ]
}

[sub_resource type="Animation" id=3]
tracks/0/type = "value"
tracks/0/path = NodePath("damage_indicator/dmg_label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("damage_indicator/dmg_label:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 160, 40 ), Vector2( 170, 10 ), Vector2( 160, 40 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.316406, 0.0346069, 0.0346069, 1 ), Color( 1, 1, 1, 1 ), Color( 0.316406, 0.0346069, 0.0346069, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "hurt_anim_over"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("sprite:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.565217, 0.560825 ), Vector2( 0.565217, 0.560825 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("damage_indicator/dmg_label:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 85.2174, 133.72 ), Vector2( 85.2174, 133.72 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.565217, 0.560825 ), Vector2( 0.565217, 0.560825 ) ]
}

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=6]
size = 20
font_data = ExtResource( 11 )

[node name="enemy_general" type="Node2D"]
script = ExtResource( 1 )

[node name="sprite" type="Sprite" parent="."]
position = Vector2( 85.2174, 133.72 )
scale = Vector2( 0.565217, 0.560825 )
texture = ExtResource( 2 )

[node name="type_container" type="HBoxContainer" parent="."]
visible = false
margin_left = 20.0
margin_top = 220.0
margin_right = 142.0
margin_bottom = 260.0
alignment = 1

[node name="type0" type="TextureRect" parent="type_container"]
margin_right = 59.0
margin_bottom = 40.0
texture = ExtResource( 3 )

[node name="type1" type="TextureRect" parent="type_container"]
margin_left = 63.0
margin_right = 122.0
margin_bottom = 40.0
texture = ExtResource( 4 )

[node name="hp_bar" type="TextureProgress" parent="."]
margin_left = 10.0
margin_right = 163.0
margin_bottom = 40.0
min_value = -5.0
value = 1.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )

[node name="attack_timer" type="Timer" parent="."]
autostart = true

[node name="anim" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 1 )
anims/death = SubResource( 2 )
anims/hurt = SubResource( 3 )
anims/idle = SubResource( 4 )

[node name="weak_resist_box" type="VBoxContainer" parent="."]
margin_left = 176.0
margin_right = 216.0
margin_bottom = 40.0

[node name="weaknesses_box" type="VBoxContainer" parent="weak_resist_box"]
margin_right = 169.0
margin_bottom = 77.0

[node name="weaknesses_header_sprite" type="TextureRect" parent="weak_resist_box/weaknesses_box"]
margin_right = 169.0
margin_bottom = 29.0
texture = ExtResource( 7 )

[node name="type_gui" parent="weak_resist_box/weaknesses_box" instance=ExtResource( 8 )]
margin_top = 33.0
margin_right = 169.0
margin_bottom = 53.0

[node name="type_gui2" parent="weak_resist_box/weaknesses_box" instance=ExtResource( 8 )]
margin_top = 57.0
margin_right = 169.0
margin_bottom = 77.0

[node name="resistances_box" type="VBoxContainer" parent="weak_resist_box"]
margin_top = 81.0
margin_right = 169.0
margin_bottom = 110.0

[node name="resistances_header_sprite" type="TextureRect" parent="weak_resist_box/resistances_box"]
margin_right = 169.0
margin_bottom = 29.0
texture = ExtResource( 9 )

[node name="damage_indicator" type="Node2D" parent="."]
position = Vector2( 0, 50 )

[node name="dmg_label" type="Label" parent="damage_indicator"]
visible = false
margin_left = 160.0
margin_top = 40.0
margin_right = 279.0
margin_bottom = 267.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.636719, 0.0522308, 0.0522308, 1 )
text = "-1.5"

[node name="innerid_label" type="Label" parent="."]
margin_left = 10.0
margin_top = -24.0
margin_right = 83.0
margin_bottom = -4.0
custom_fonts/font = SubResource( 6 )
text = "InnerID"
__meta__ = {
"_edit_use_anchors_": false
}
